Style overlaps fixed on modal, localStorage implemented. Now, the user can save their todo list

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -5,6 +5,7 @@
   display: grid;
   place-content: center;
   inset: 0;
+  z-index: 1;
 }
 
 .backdrop {
